# webserv

./: CMakeLists.txt  Makefile  README.md  config.conf  main.cpp  multi_servs.conf  simple.conf  test.conf  webserv.conf
resources/cgi-bin/: rafael.cgi
resources/cgi-bin/src/: rafael_cgi.c
resources/html/autoindex_demo/: style.css
resources/html/cgi_demo/: index.html
resources/html/cgi_php/: index.php
resources/html/cgi_py/: game.py  index.py
resources/html/coolpage/: index.html
resources/html/demo_del/: for_del.txt
resources/html/page/: index.html  index_upload.html  test_upload.html
resources/html/test_multi_serv/serv1/: index.html
resources/html/test_multi_serv/serv2/: index.html
resources/html/test_multi_serv/serv3/: index.html
src/main/: CMakeLists.txt  main.cpp
src/main/cgi/: CGI.cpp  CGI.hpp  CGIHandler.cpp  CGIHandler.hpp  CMakeLists.txt
src/main/config/: CMakeLists.txt
src/main/config/model/: DefaultParameters.cpp  Location.cpp  Location.hpp  VirtualServer.cpp  VirtualServer.hpp
src/main/config/repository/: ConfigRepositoryImpl.cpp  ConfigRepositoryImpl.hpp  DefaultErrorPagesRepo.cpp  DefaultErrorPagesRepo.hpp  DefaultStatusCodeRepo.cpp  DefaultStatusCodeRepo.hpp  RepositoryErrorPages.hpp
src/main/config/storage/: ConfigStorage.cpp  ConfigStorage.hpp
src/main/config/types/: SettingTypes.hpp
src/main/data/: CMakeLists.txt
src/main/data/model/: DefaultParameters.cpp  DefaultParameters.hpp  Location.cpp  Location.hpp  VirtualServer.cpp
src/main/data/repository/: ClientRepository.cpp  RepositoryErrorPages.cpp  SettingsRepositoryImpl.cpp  SettingsRepositoryImpl.hpp
src/main/data/storage/: SettingsStorage.cpp  SettingsStorage.hpp
src/main/domain/: CMakeLists.txt
src/main/domain/model/: Client.cpp  Client.hpp  Config.cpp  Config.hpp  EnumMethod.hpp  Parameters.hpp  Request.cpp  Request.hpp  RequestHandler.hpp  RequestParser.hpp  Response.hpp  WebClient.cpp  WebClient.hpp
src/main/domain/repository/: SettingsRepository.hpp
src/main/exception/: CGIException.cpp  CGIException.hpp  CMakeLists.txt  ErrorPagePathNotFoundException.cpp  ErrorPagePathNotFoundException.hpp  FileNotFoundException.cpp  FileNotFoundException.hpp  InternalServerErrorException.hpp  NumberFormatException.cpp  NumberFormatException.hpp  ParseRequestException.cpp  ParseRequestException.hpp
src/main/interacts/: BaseHandler.cpp  BaseHandler.hpp  CMakeLists.txt  DeleteHandler.cpp  DeleteHandler.hpp  GetHandler.cpp  GetHandler.hpp  PostHandler.cpp  PostHandler.hpp  RequestHandler.cpp  RequestHandler.hpp  RequestParser.cpp  RequestParser.hpp
src/main/model/: CMakeLists.txt  Client.cpp  Client.hpp  Config.cpp  Config.hpp  HttpMessage.cpp  HttpMessage.hpp  HttpMethod.hpp  Parameters.hpp  Request.cpp  Request.hpp  Response.cpp  Response.hpp
src/main/parser/: CMakeLists.txt  ConfigParser.cpp  ConfigParser.hpp  ParserConfig.cpp  ParserConfig.hpp  SettingsCollector.hpp  Token.cpp  Token.hpp  Tokenizer.cpp  Tokenizer.hpp
src/main/repository/: ConfigRepository.hpp
src/main/server/: CMakeLists.txt  ClientRepository.cpp  ClientRepository.hpp  Constants.hpp  HttpServer.cpp  HttpServer.hpp  QueueServer.cpp  QueueServer.hpp  Server.cpp  Server.hpp  Socket.cpp  Socket.hpp  SocketKqueue.cpp  SocketKqueue.hpp
src/main/util/: CMakeLists.txt  Constants.hpp  FileReader.cpp  FileReader.hpp  MimeTypesRepo.cpp  MimeTypesRepo.hpp  Utils.cpp  Utils.hpp  usings.hpp
src/test/: CMakeLists.txt  Makefile
src/test/config/storage/: TestConfigStorage.cpp
src/test/data/storage/: TestSettingsStorage.cpp
src/test/interacts/: TestRequestParser.cpp
src/test/parser/: TestConfigParser.cpp
